<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/authToolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvAuthToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_authentication_title"
            android:textColor="@color/colorGreen"
            android:textSize="22sp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintBottom_toBottomOf="@+id/authToolbar"
            app:layout_constraintEnd_toEndOf="@+id/authToolbar"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/authToolbar" />

        <EditText
            android:id="@+id/etAuthEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:hint="@string/activity_authentication_email_title"
            android:lines="1"
            android:minWidth="250dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textColorHint="#80504D4D"
            android:textSize="15sp"
            android:fontFamily="@font/lato_regular"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/etAuthPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authToolbar"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/etAuthPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:hint="@string/activity_authentication_password_title"
            android:minWidth="250dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textColorHint="#80504D4D"
            android:textSize="15sp"
            android:fontFamily="@font/lato_regular"
            android:lines="1"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/etAuthPassConfirmation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAuthEmail"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/etAuthPassConfirmation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:hint="@string/activity_authentication_password_confirmation_title"
            android:lines="1"
            android:minWidth="250dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textColorHint="#80504D4D"
            android:textSize="15sp"
            android:fontFamily="@font/lato_regular"
            android:inputType="textPassword"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthEnter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAuthPassword"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btnAuthEnter"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/activity_authentication_sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthRegistration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAuthPassConfirmation"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btnAuthRegistration"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/activity_authentication_registration"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:fontFamily="@font/lato_semibold_italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAuthEnter"
            app:layout_constraintVertical_chainStyle="packed" />

        <ProgressBar
            android:id="@+id/pbAuth"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:progress="50"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>